# gag_combo_gen

./: .gitignore  .markdownlint.json  Cargo.toml  Makefile  README.md
src/: accuracy.rs  gag_types.rs  gags.rs  hp.rs  lib.rs  main.rs  opt.rs
tex/: gaffle.tex
