[package]
name = "gag_combo_gen"
version = "0.1.5"
authors = ["Dr. Jonathan Helianthicus Doe, IV <augiii@protonmail.com>"]
edition = "2018"
description = """
Generates optimal single-cog gag combinations given user constraints \
(back-end)"""
homepage = "https://zz.nfshost.com/"
repository = "https://github.com/JonathanHelianthicusDoe/gag_combo_gen"
readme = "README.md"
keywords = ["toontown", "gag", "combo", "optimizer", "ttr"]
categories = ["Algorithms", "Games"]
license = "AGPL-3.0-or-later"

[dependencies]
fxhash = "0.2.1"
lazy_static = "1.4.0"

[features]
default = []
